Fix overflowing margins

--- a/assets/stylesheets/bootstrap.scss
+++ b/assets/stylesheets/bootstrap.scss
@@ -32,7 +32,7 @@ body {
   margin-bottom: 56px;
   font-size: 1rem;
 
-  @include media-breakpoint-down(lg) {
+  @include media-breakpoint-down(md) {
     font-size:  0.875rem;
   }
 }
